k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentinel-backend
  namespace: sentinel
  labels:
    app: secure-auth-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure-auth-backend
  template:
    metadata:
      labels:
        app: secure-auth-backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
      - name: secure-auth-backend-container
        image: mahmmadakhil/sentinel-backend:1.0.0
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: secure-auth-backend
  namespace: sentinel
spec:
  selector:
    app: secure-auth-backend
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
